# gamestone-backend-NSS-FE-Capstone-

./: .dockerignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  Dockerfile  README.md  docker-compose.yml  fly.toml  jsconfig.json  manage.py  openapitools.json  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  webpack.config.js
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  fly.yml
accounts/: admin.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
api/: admin.py  urls.py
api-clients/: package.json
api/migrations/: 0001_initial.py  0002_remove_usergame_progress.py  0003_rename_abreviation_platform_abbreviation_and_more.py
api/models/: __init__.py  platform.py  user.py  user_game.py  user_platform.py
api/serializers/: __init__.py  platform_serializer.py  user_game_serializer.py  user_platform_serializer.py  user_registration_serializer.py  user_serializer.py
api/views/: __init__.py  platform_view.py  user_game_view.py  user_platform_view.py  user_view.py
config/: urls.py  wsgi.py
config/settings/: base.py  collectstatic.py  local.py  prod.py
gamestone/: admin.py  apps.py  models.py  package.json  settings.py  urls.py  views.py  wsgi.py
gamestone/migrations/: 0001_initial.py  0002_initial.py
homepage/: urls.py  views.py
hotwire/: apps.py  urls.py  views.py
identity/: apps.py  http.py  models.py  package.json  serializers.py  tailwind.config.js  urls.py  views.py
open_id/: admin.py  apps.py  models.py  views.py
resource_tracker/: admin.py  apps.py  decorators.py  forms.py  htmx_views.py  models.py  package.json  tailwind.config.js  urls.py  views.py
skyrim_helper/: admin.py  apps.py  forms.py  models.py  package.json  tailwind.config.js  urls.py  views.py
templates/: _navbar.html  base.html
(+220 files in other folders)
